fixed the spring security problem

--- a/src/main/resources/templates/sign_in.html
+++ b/src/main/resources/templates/sign_in.html
@@ -19,10 +19,10 @@
                         <p th:text="${errorMessage}"></p>
                     </div>
                     <div class="mb-3">
-                        <label for="email" class="form-label">Email address</label>
-                        <input type="email" name="email" th:field="*{email}" class="form-control" id="email" placeholder="name@example.com" required>
+                        <label for="email" class="form-label">Username</label>
+                        <input type="text" name="username" th:field="*{username}" class="form-control" id="email" placeholder="name@example.com" required>
                         <div class="invalid-feedback">
-                            Please provide an email.
+                            Please provide a username.
                         </div>
                     </div>
                     <div class="mb-3">
