--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="col-md-6">
                         <label for="phone" class="form-label">Phone</label>
-                        <input type="phone" name="phone" th:field="*{phoneNumber}" class="form-control" id="phone" required>
+                        <input type="text" th:field="*{phoneNumber}" class="form-control" id="phone" required>
                         <div class="invalid-feedback">
                             Please provide a phone number.
                         </div>
