--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
+<nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+    <div class="container-fluid">
+        <p>My Dashboard</p>
+    </div>
+</nav>
+<br>
+<br>
+<h2>Welcome, <span th:text="${user.name}"></span>!</h2>
 
+<h4>Your Accounts</h4>
+<ul>
+    <li th:text="${account.accountType}"></li>
+    <li th:text="${account.accountNumber}"></li>
+    <li th:text="${account.balance}"></li>
+</ul>
+<h4>Transactions</h4>
+<table class="table">
+    <tr>
+        <th>Date</th>
+        <th>Description</th>
+        <th>Amount</th>
+    </tr>
+    <tr th:each="tx : ${transactions}">
+        <td th:text="${tx.transactionDate}"></td>
+        <td th:text="${tx.description}"></td>
+        <td th:text="${tx.amount}"></td>
+    </tr>
+</table>
 </body>
 </html>
