--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -21,10 +21,24 @@
     <li th:text="${account.accountNumber}"></li>
     <li th:text="${account.balance}"></li>
 </ul>
+<h4>Actions</h4>
+<ul>
+    <li>Withdrawal</li>
+    <li>Deposit</li>
+    <li>Transfer</li>
+</ul>
 <h4>Transactions</h4>
 <table class="table">
-
-
+    <tr>
+        <th>Date</th>
+        <th>Description</th>
+        <th>Amount</th>
+    </tr>
+    <tr th:each="tx : ${transactions}">
+        <td th:text="${tx.transactionDate}"></td>
+        <td th:text="${tx.description}"></td>
+        <td th:text="${tx.amount}"></td>
+    </tr>
 </table>
 </body>
 </html>
