--- a/src/main/resources/templates/withdraw.html
+++ b/src/main/resources/templates/withdraw.html
@@ -2,23 +2,23 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Deposit</title>
+    <title>Withdraw</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
 <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class="container-fluid">
-        <p>Deposit</p>
+        <p>Withdraw</p>
     </div>
 </nav>
 <br>
 <br>
 <div class="container">
     <div class="row">
-        <form th:action="@{/deposit}" method="post" th:object="${transaction}">
+        <form th:action="@{/withdraw}" method="post" th:object="${transaction}">
             <div class="input-group mb-3">
                 <span class="input-group-text" >Amount:</span>
-                <input type="number" th:field="*{amount}" class="form-control" placeholder="amount" required>
+                <input type="number" th:field="*{amount}" class="form-control" placeholder="withdraw" required>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
