--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -53,6 +53,13 @@
                             Please provide a phone number.
                         </div>
                     </div>
+                    <div class="col-md-6">
+                        <label for="nationalIdNumber" class="form-label">Nin</label>
+                        <input type="text" th:field="*{nationalIdNumber}" class="form-control" id="nationalIdNumber" required>
+                        <div class="invalid-feedback">
+                            Please provide your Nin.
+                        </div>
+                    </div>
                     <div class="col-12">
                         <label for="address" class="form-label">Address</label>
                         <input type="text" name="address" th:field="*{address}" class="form-control" id="address" placeholder="1234 Main St" required>
