--- a/src/main/resources/templates/create_account.html
+++ b/src/main/resources/templates/create_account.html
@@ -9,7 +9,7 @@
 <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class="container-fluid">
         <h1 class="navbar-brand">
-            Account Details
+            Create Account
         </h1>
     </div>
 </nav>
